2008-04-01  John W. Eaton  <jwe@octave.org>

	* pt-id.h (do_lookup (bool&, bool)): Delete.
	(do_lookup (tree_argument_list *, const string_vector&,
	octave_value_list&, bool&)): Call MAYBE_DO_BREAKPOINT here.

2008-04-02  David Bateman  <dbateman@free.fr>

	* graphics.cc (void gnuplot_backend::close_figure (const
	octave_value&) const): Allow for an input and output stream.

2008-03-28  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lookup.cc: New file.
	* Makefile.in (DLD_XSRC): Add it to the list.

2008-03-28  David Bateman  <dbateman@free.fr>

	* ov-complex.cc (SCALAR_MAPPER, CD_SCALAR_MAPPER): New macro for
	complex values with zero imaginary part.
	(erf, erfc, gamma, lgamma): Use the new mappers to define these
	mapper functions.
	* ov-complex.h (erf, erfc, gamma, lgamma): Declare them.
	* ov-cx-mat.cc (any_element_less_than, any_element_greater_than):
	New static functions
	(DARRAY_MAPPER, CD_ARRAY_MAPPER): New macro for complex values
	with zero imaginary part.
	(erf, erfc, gamma, lgamma): Use the new mappers to define these
	mapper functions.
	* ov-cx-mat.h (erf, erfc, gamma, lgamma): Declare them.
	* ov-cx-sparse.cc (any_element_less_than, any_element_greater_than):
	New static functions
	(DSPARSE_MAPPER, CD_SPARSE_MAPPER): New macro for complex values
	with zero imaginary part.
	(erf, erfc, gamma, lgamma): Use the new mappers to define these
	mapper functions.
	* ov-cx-sparse.h (erf, erfc, gamma, lgamma): Declare them.
	* ov-re-sparse.cc (CD_SPARSE_MAPPER): Use correct mapper functors.
	* mapper.cc: Add tests for the above cases.

2008-03-27  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/max.cc: Rename from minmax.cc.
	* Makefile.in (DLD_XSRC): Rename minmax.cc to max.cc.

	* DLD-FUNCTIONS/__convn__.cc (convn): Use traits class and
	typedefs to allow all types to be deduced from argument types.

2008-03-27  Soren Hauberg  <hauberg@gmail.com>

	* DLD-FUNCTIONS/__convn__.cc (Fconvn): Allow convolving real data with
	complex data.
